--- a/index.html
+++ b/index.html
@@ -1,13 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahat Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1 class="blue-color"> Greetings!</h1>
+            <h1> Welcome To </h1>
+            <h1> <span class="orange-color">Rahat's Rafsan</span> Portfolio</h1>
+            <h3>Hello, I'm Rahat Rafsan; A business graduate and tech enthusiast!</h3>
+            <p>
+                A marketing major graduate from North South University with the ambition to dedicate my knowledge and
+                creativity to the dynamics of current marketing world with innovative ideas. I have the experience of
+                working across
+                universities, marketing agencies, non-profit organization and
+                have been trained by Grameenphone through their GP Explorers
+                2.0 program.</p>
+            <a class="link-button" href="https://www.linkedin.com/in/yeirahat10/">Hire Me</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/eshann.png" alt="">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
