--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
             <img src="images/eshann.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="showOff/my-bg2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Web Developer</h1>
+            <h2>Anybody can code; just like me!</h2>
+            <p>
+                I've learned the basic HTML & CSS. I can now build any simple to moderate websites. Being a business
+                graduate it was a tough challenge to dive into this world of programming but I can tell myself now I did
+                the right thing.
+            </p>
+            <a class="link-button" target="_blank" href="">Download CV</a>
+        </div>
+
+    </section>
 
 
 </body>
