--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1 class="blue-color"> Greetings!</h1>
             <h1> Welcome To </h1>
@@ -33,7 +33,7 @@
             <img src="images/eshann.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="showOff/my-bg2.png" alt="">
         </div>
@@ -49,6 +49,36 @@
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1> Experiences</h1>
+        <div class="flexible-container">
+            <div id="marketing-exp" class="experience-item">
+                <h2>Digital Marketing</h2>
+                <h3 class="orange-color">2021-Present | Strategic Planner</h3>
+                <p>
+                    I have the experience of working across
+                    universities, marketing agencies, non-profit organization and
+                    have been trained by Grameenphone through their GP Explorers
+                    2.0 program.
+
+                </p>
+
+            </div>
+            <div id="developer-exp" class="experience-item">
+                <h2>Web Developer</h2>
+                <h3 class="orange-color"> 2022-Prsent | Beginner Level Developer</h3>
+                <p>
+                    Started from 2022; I began to grow interest on programming and with that gist of interest I have
+                    learned
+                    HTML & CSS as of yet. I can now build any simple to moderate websites.
+                </p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p> Rahat Rafsan Portfolio.</p>
+    </footer>
 
 
 </body>
