--- a/index.html
+++ b/index.html
@@ -76,9 +76,12 @@
         </div>
 
     </section>
+    <!-- special characters -->
     <footer>
-        <p> Rahat Rafsan Portfolio.</p>
+        <p> copyright &copy; Rahat Rafsan Portfolio.</p>
     </footer>
+
+
 
 
 </body>
